--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
             margin-top: 40px;
             padding-top: 30px;
             border-top: 2px solid #eee;
+            display: none;
         }
 
         .edit-section h3 {
