--- a/index.html
+++ b/index.html
@@ -324,13 +324,16 @@
     <script>
         // Default lists
         let flavors = [
-            "Buffalo", "French Onion", "BBQ", "Teriyaki", "Cajun", 
-            "Garlic Parmesan", "Honey Mustard", "Spicy Mayo", "Ranch", "Caesar"
+            "Buffalo", "BBQ", "Philly Cheesesteak", "Pizza", "Butter Chicken", 
+            "Tikka Masala", "Reuben", "Greek", "Italian", "Spinach Artichoke", 
+            "Caesar", "Thai Peanut", "Mango", "Jerk Chicken", "Beef Bulgogi", 
+            "French Onion", "Mexican Street Corn", "Cajun", "Cubano", "Kalua Pork"
         ];
 
         let meals = [
-            "Tacos", "Burgers", "Pizza", "Pasta", "Stir-fry", 
-            "Sandwiches", "Salad", "Wraps", "Rice Bowl", "Quesadillas"
+            "Tacos", "Burritos", "Wraps", "Stir Fry", "Salad", "Sandwich", 
+            "Tostadas", "Tray Bake", "Burgers", "Bowls", "Nachos", "Soup", 
+            "Calzone", "Quesadilla", "Pizza", "Pasta"
         ];
 
         // Initialize textareas with default values
