--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
         let meals = [
             "Tacos", "Burritos", "Wraps", "Stir Fry", "Salad", "Sandwich", 
             "Tostadas", "Tray Bake", "Burgers", "Bowls", "Nachos", "Soup", 
-            "Calzone", "Quesadilla", "Pizza", "Pasta"
+            "Calzone", "Quesadilla", "Pizza", "Baked Potatoes", "Pasta"
         ];
 
         // Initialize textareas with default values
